service UserNetworkBoundaryService {

// Takes in user number Data
    rpc userNumberInput(UserNumber) returns (ConfigKey){}

// Chooses the users Delimiter.
    rpc delimiterOutput(Delimeter) returns (ConfigKey){}

// Sets the destination of the data results
    rpc destinationOutput(Destinations) returns (ConfigKey){}

// Compute results
    rpc compute(ConfigKeyCollection) returns (Result){}

}
message UserNumber{

    optional UserNumber userNumber = 1;

    optional int32 UserNumberInt = 2;

    optional string FileUserNumber = 3;

    repeated int32 InMemoryUserNumber = 4;

}
message ConfigKey{

    optional int32 key = 1;

    optional string errorMessage = 3;

}
message Delimeter{

    optional string chosenDelimeter = 1;

}
message Destinations{

    optional string userDestination = 1;

}
message ConfigKeyCollection{

    repeated ConfigKey listOfKeys = 1;

}
message Result{

    optional string errorMessage = 1;
}